WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257407
Web Inspector: XHR request with same URL as main resource should have type XHR
https://bugs.webkit.org/show_bug.cgi?id=257407
Summary
Web Inspector: XHR request with same URL as main resource should have type XHR
Yury Semikhatsky
Reported
2023-05-26 18:08:48 PDT
XHRs requests with the same url as main resource should have type XHR rather than Document. This was fixed in
https://bugs.webkit.org/show_bug.cgi?id=68646
but regressed at some point later. Original report in Playwright:
https://github.com/microsoft/playwright/issues/22812
Attachments
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2023-05-26 18:18:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14417
EWS
Comment 2
2023-05-30 11:37:58 PDT
Committed
264686@main
(883556d2265f): <
https://commits.webkit.org/264686@main
> Reviewed commits have been landed. Closing PR #14417 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-30 11:38:18 PDT
<
rdar://problem/110016863
>
Fujii Hironori
Comment 4
2023-06-01 13:59:14 PDT
http/tests/inspector/network/xhr-request-type.html is failing. Could you take a look?
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Finspector%2Fnetwork%2Fxhr-request-type.html
Yury Semikhatsky
Comment 5
2023-06-01 17:17:37 PDT
Hmm, the .json resource is returned in base64 on some platforms, I'll take a look.
Yury Semikhatsky
Comment 6
2023-06-01 18:09:53 PDT
The test is passing locally on M1 and macOS 13. I wonder if it has to do with the web server config.
Fujii Hironori
Comment 7
2023-06-01 18:56:31 PDT
This test failure is reproducible with WinCairo. The web server doesn't know .json filename suffix. Renaming data.json to data.js can works around the server configuration problem.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug