Web Inspector: XHR request with same URL as main resource should have type XHR https://bugs.webkit.org/show_bug.cgi?id=257407

Reviewed by Devin Rousso.

Only use cached resource type when couldn't infer resource type based on the current
ResourceRequest because CachedResource for the same URL may have different type. This
fixes the bug where XHR is sent with the same URL as the main resource and was
wrongly marked as another request with type Document rather than XHR.

* LayoutTests/http/tests/inspector/network/xhr-request-type-expected.txt: Added.
* LayoutTests/http/tests/inspector/network/xhr-request-type.html: Added.
* Source/WebCore/inspector/agents/InspectorNetworkAgent.cpp:
(WebCore::InspectorNetworkAgent::willSendRequest):

* LayoutTests/platform/mac-wk1/TestExpectations: ignore new test in WK1.

Canonical link: https://commits.webkit.org/264686@main